@@ -57,9 +57,6 @@ Print out help and exit.
 These options are not intended to be used by end users using the command
 line, they are support options for the GUI component. Use or rely on
 them at your own peril.
-.IP "-n|--no-autotrip"
-Disable automatic trip starting and stopping. If you use this, you can
-send SIGUSR1 and SIGUSR2 to start and stop trips, respectively.
 .IP "-t|--spam-stdout"
 Write all readings to stdout. The format is unlikely to change in
 practice, but if you choose to try to parse this yourself, I don't want
